# hatchery

./: .gitignore  CLAUDE.md  PLAN.md  README.md  cabal.project  flake.nix
.claude/projects/-home-jhhuh-Sync-proj-hatchery/memory/: feedback_cache_line_latency.md
artifacts/: devlog.md
artifacts/skills/: ghc-cmm-atomics-and-spin-wait-patterns.md  ghc-threaded-rts-ffi-threading-model.md
docs/: design.md  insights-technical.md  insights.md
docs/plans/: 2026-03-15-direct-dispatch-design.md  2026-03-15-direct-dispatch-impl.md  2026-03-15-egg-object-architecture-design.md  2026-03-15-hatchery-impl-plan.md  2026-03-15-hatchery-phase1-design.md  2026-03-15-spin-wait-design.md  2026-03-15-spin-wait-implementation.md
hatchery/: hatchery.cabal
hatchery-bench/: hatchery-bench.cabal
hatchery-bench/cbits/: return42.c
hatchery-bench/src/: Main.hs  PrimBaseline.hs
hatchery-llvm/: hatchery-llvm.cabal
hatchery-llvm/src/Hatchery/: LLVM.hs
hatchery/bench/: Main.hs
hatchery/cbits/: Makefile  direct_helpers.c  fork_server.c  protocol.h  ring_buffer.h  ring_buffer_layout.h  seccomp_filter.c  seccomp_filter.h  syscall.h  vfork_helper.c
hatchery/src/: Hatchery.hs
hatchery/src/Hatchery/: Config.hs  Core.hs  Dispatch.hs
hatchery/src/Hatchery/Internal/: Compile.hs  Embedded.hs  Memfd.hs  Protocol.hs  RingOffsets.hsc  SpinWait.hs  Vfork.hs
hatchery/test/: Main.hs
hatchery/test-payloads/: return42.asm
trustless-ffi/: trustless-ffi.cabal
trustless-ffi/src/: TrustlessFFI.hs
trustless-ffi/src/TrustlessFFI/: Marshal.hs
