cabal-version: 3.0
name:          hatchery-bench
version:       0.1.0.0
synopsis:      Benchmarks for hatchery
license:       BSD-3-Clause

executable hatchery-bench
  hs-source-dirs: src
  main-is:        Main.hs
  c-sources:      cbits/return42.c
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hatchery
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O2

executable hatchery-bench-st
  hs-source-dirs: src
  main-is:        Main.hs
  c-sources:      cbits/return42.c
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hatchery
  default-language: Haskell2010
  ghc-options: -Wall -O2
