cabal-version: 3.0
name:          hatchery-llvm
version:       0.1.0.0
synopsis:      LLVM IR to machine code compilation bridge for hatchery
license:       BSD-3-Clause

library
  exposed-modules:
    Hatchery.LLVM
  build-depends:
    base >= 4.16 && < 5,
    bytestring
    -- llvm-tf >= 16.0  -- deferred until LLVM C headers available in devShell
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
