cabal-version: 3.0
name:          hatchery-llvm
version:       0.1.0.0
synopsis:      LLVM IR to machine code compilation bridge for hatchery
license:       BSD-3-Clause

library
  exposed-modules:
    Hatchery.LLVM
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    llvm-tf >= 21.0,
    llvm-ffi >= 21.0
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
