cabal-version: 3.0
name:          hatchery
version:       0.1.0.0
synopsis:      Process sandbox toolkit with pre-spawned worker pools
license:       BSD-3-Clause

library
  exposed-modules:
    Hatchery
    Hatchery.Config
    Hatchery.Core
    Hatchery.Dispatch
  other-modules:
    Hatchery.Internal.Compile
    Hatchery.Internal.Memfd
    Hatchery.Internal.Vfork
    Hatchery.Internal.Protocol
    Hatchery.Internal.Embedded
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    async,
    unix,
    template-haskell,
    process,
    directory
  hs-source-dirs: src
  c-sources:
    cbits/vfork_helper.c
  include-dirs: cbits
  default-language: Haskell2010
  ghc-options: -Wall

test-suite hatchery-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hatchery
  default-language: Haskell2010
  ghc-options: -Wall -threaded

executable hatchery-bench
  hs-source-dirs: bench
  main-is:        Main.hs
  c-sources:      cbits/return42.c
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hatchery
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O2

executable hatchery-bench-st
  hs-source-dirs: bench
  main-is:        Main.hs
  c-sources:      cbits/return42.c
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    hatchery
  default-language: Haskell2010
  ghc-options: -Wall -O2
