cabal-version: 3.0
name:          trustless-ffi
version:       0.1.0.0
synopsis:      Foreign function calls that can't crash your program
license:       BSD-3-Clause

library
  exposed-modules:
    TrustlessFFI
    TrustlessFFI.Marshal
  build-depends:
    base >= 4.16 && < 5,
    bytestring,
    async,
    hatchery
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
